--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="alert alert-warning">
-        <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>
+        <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet huh?</span>
         <a class="alert-link" routerLink="/account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
       </div>
     </div>
