added all front end files for component and modules for each feature apart from initial training. Also altered some other config files but reverted that change

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -137,6 +137,21 @@
                 <span jhiTranslate="global.menu.entities.song">Song</span>
               </a>
             </li>
+            <<<<<<< HEAD =======
+            <li>
+              <a
+                class="dropdown-item"
+                routerLink="main-page-entity"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                (click)="collapseNavbar()"
+              >
+                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
+                <span jhiTranslate="global.menu.entities.mainPage">Main Page</span>
+              </a>
+            </li>
+            >>>>>>> a30abdc (added all front end files for component and modules for each feature apart from initial training. Also altered
+            some other config files but reverted that change)
             <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
           </ul>
         </li>
