added all front end files for component and modules for each feature apart from initial training. Also altered some other config files but reverted that change

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -140,7 +140,7 @@
             <li>
               <a
                 class="dropdown-item"
-                routerLink="main-page"
+                routerLink="main-page-entity"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
