--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -1,1 +1,12 @@
-<p>main-page works!</p>
+<link rel="stylesheet" type="text/css" href="main-page.component.scss" />
+<div class="row" id="page">
+  <div class="col-1" id="left-column">
+    <button class="button" id="like-button">Like</button>
+  </div>
+  <div class="col-2" id="center-column">
+    <p>Song Data Here</p>
+  </div>
+  <div class="col-3" id="right-column">
+    <button class="button" id="dislike-button">Dislike</button>
+  </div>
+</div>
