--- a/src/main/webapp/app/entities/song/update/song-update.component.html
+++ b/src/main/webapp/app/entities/song/update/song-update.component.html
@@ -8,102 +8,56 @@
       <div>
         <jhi-alert-error></jhi-alert-error>
 
-        <div class="row mb-3" *ngIf="editForm.controls.id.value !== null">
-          <label class="form-label" jhiTranslate="global.field.id" for="field_id">ID</label>
-          <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
-        </div>
-
         <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.song.spotifySongId" for="field_spotifySongId">Spotify Song Id</label>
+          <label class="form-label" jhiTranslate="teamprojectApp.song.id" for="field_id">Id</label>
           <input
             type="text"
             class="form-control"
-            name="spotifySongId"
-            id="field_spotifySongId"
-            data-cy="spotifySongId"
-            formControlName="spotifySongId"
+            name="id"
+            id="field_id"
+            data-cy="id"
+            formControlName="id"
+            [readonly]="editForm.get('id')!.value != null"
           />
-          <div
-            *ngIf="
-              editForm.get('spotifySongId')!.invalid && (editForm.get('spotifySongId')!.dirty || editForm.get('spotifySongId')!.touched)
-            "
+          <div *ngIf="editForm.get('id')!.invalid && (editForm.get('id')!.dirty || editForm.get('id')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('id')?.errors?.required" jhiTranslate="entity.validation.required">
+              This field is required.
+            </small>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" jhiTranslate="teamprojectApp.song.artist" for="field_artist">Artist</label>
+          <input type="text" class="form-control" name="artist" id="field_artist" data-cy="artist" formControlName="artist" />
+          <div *ngIf="editForm.get('artist')!.invalid && (editForm.get('artist')!.dirty || editForm.get('artist')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('artist')?.errors?.required" jhiTranslate="entity.validation.required">
+              This field is required.
+            </small>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" jhiTranslate="teamprojectApp.song.title" for="field_title">Title</label>
+          <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
+          <div *ngIf="editForm.get('title')!.invalid && (editForm.get('title')!.dirty || editForm.get('title')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('title')?.errors?.required" jhiTranslate="entity.validation.required">
+              This field is required.
+            </small>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" jhiTranslate="teamprojectApp.song.mainPage" for="field_mainPage">Main Page</label>
+          <select
+            class="form-control"
+            id="field_mainPage"
+            data-cy="mainPage"
+            name="mainPage"
+            formControlName="mainPage"
+            [compareWith]="compareMainPage"
           >
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('spotifySongId')?.errors?.required"
-              jhiTranslate="entity.validation.required"
-            >
-              This field is required.
-            </small>
-          </div>
-        </div>
-
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.song.songName" for="field_songName">Song Name</label>
-          <input type="text" class="form-control" name="songName" id="field_songName" data-cy="songName" formControlName="songName" />
-          <div *ngIf="editForm.get('songName')!.invalid && (editForm.get('songName')!.dirty || editForm.get('songName')!.touched)">
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('songName')?.errors?.required"
-              jhiTranslate="entity.validation.required"
-            >
-              This field is required.
-            </small>
-          </div>
-        </div>
-
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.song.spotifyArtistId" for="field_spotifyArtistId">Spotify Artist Id</label>
-          <input
-            type="text"
-            class="form-control"
-            name="spotifyArtistId"
-            id="field_spotifyArtistId"
-            data-cy="spotifyArtistId"
-            formControlName="spotifyArtistId"
-          />
-          <div
-            *ngIf="
-              editForm.get('spotifyArtistId')!.invalid &&
-              (editForm.get('spotifyArtistId')!.dirty || editForm.get('spotifyArtistId')!.touched)
-            "
-          >
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('spotifyArtistId')?.errors?.required"
-              jhiTranslate="entity.validation.required"
-            >
-              This field is required.
-            </small>
-          </div>
-        </div>
-
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.song.artistName" for="field_artistName">Artist Name</label>
-          <input
-            type="text"
-            class="form-control"
-            name="artistName"
-            id="field_artistName"
-            data-cy="artistName"
-            formControlName="artistName"
-          />
-          <div *ngIf="editForm.get('artistName')!.invalid && (editForm.get('artistName')!.dirty || editForm.get('artistName')!.touched)">
-            <small
-              class="form-text text-danger"
-              *ngIf="editForm.get('artistName')?.errors?.required"
-              jhiTranslate="entity.validation.required"
-            >
-              This field is required.
-            </small>
-          </div>
-        </div>
-
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.song.user" for="field_user">User</label>
-          <select class="form-control" id="field_user" data-cy="user" name="user" formControlName="user" [compareWith]="compareUser">
             <option [ngValue]="null"></option>
-            <option [ngValue]="userOption" *ngFor="let userOption of usersSharedCollection">{{ userOption.login }}</option>
+            <option [ngValue]="mainPageOption" *ngFor="let mainPageOption of mainPagesSharedCollection">{{ mainPageOption.id }}</option>
           </select>
         </div>
       </div>
