--- a/src/main/webapp/app/entities/song/detail/song-detail.component.html
+++ b/src/main/webapp/app/entities/song/detail/song-detail.component.html
@@ -10,23 +10,29 @@
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span jhiTranslate="teamprojectApp.song.id">Id</span></dt>
+        <dt><span jhiTranslate="global.field.id">ID</span></dt>
         <dd>
           <span>{{ song.id }}</span>
         </dd>
-        <dt><span jhiTranslate="teamprojectApp.song.artist">Artist</span></dt>
+        <dt><span jhiTranslate="teamprojectApp.song.spotifySongId">Spotify Song Id</span></dt>
         <dd>
-          <span>{{ song.artist }}</span>
+          <span>{{ song.spotifySongId }}</span>
         </dd>
-        <dt><span jhiTranslate="teamprojectApp.song.title">Title</span></dt>
+        <dt><span jhiTranslate="teamprojectApp.song.songName">Song Name</span></dt>
         <dd>
-          <span>{{ song.title }}</span>
+          <span>{{ song.songName }}</span>
         </dd>
-        <dt><span jhiTranslate="teamprojectApp.song.mainPage">Main Page</span></dt>
+        <dt><span jhiTranslate="teamprojectApp.song.spotifyArtistId">Spotify Artist Id</span></dt>
         <dd>
-          <div *ngIf="song.mainPage">
-            <a [routerLink]="['/main-page', song.mainPage.id, 'view']">{{ song.mainPage.id }}</a>
-          </div>
+          <span>{{ song.spotifyArtistId }}</span>
+        </dd>
+        <dt><span jhiTranslate="teamprojectApp.song.artistName">Artist Name</span></dt>
+        <dd>
+          <span>{{ song.artistName }}</span>
+        </dd>
+        <dt><span jhiTranslate="teamprojectApp.song.user">User</span></dt>
+        <dd>
+          <span>{{ song.user?.login }}</span>
         </dd>
       </dl>
 
