--- a/src/main/webapp/app/menu/liked-songs/liked-songs.component.html
+++ b/src/main/webapp/app/menu/liked-songs/liked-songs.component.html
@@ -1,1 +1,14 @@
-<p>liked-songs works!</p>
+
+<!doctype html>
+<html>
+<head>
+  <!-- Place your kit's code here -->
+  <script src="https://kit.fontawesome.com/acdbfd0897.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+<i class="fa-solid fa-thumbs-up fa-5x"></i>
+<i class="fa-solid fa-heart-circle-plus fa-4x"></i>
+</body>
+</html>
+
