--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -7,20 +7,49 @@ body {
   background-color: lightgreen;
   width: 33%;
   height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #center-column {
   background-color: lightblue;
   width: 33%;
-}
-
-#right-column {
-  background-color: lightpink;
-  width: 33%;
-}
-
-.button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.round-button {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  margin: 10px;
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+}
+
+.like-dislike {
+  &.like {
+    border-color: green;
+    &:hover {
+      background-color: green;
+      color: white;
+    }
+  }
+  &.dislike {
+    border-color: red;
+    &:hover {
+      background-color: red;
+      color: white;
+    }
+  }
 }
