--- a/src/main/webapp/app/initial-training/initial-training.component.scss
+++ b/src/main/webapp/app/initial-training/initial-training.component.scss
@@ -14,12 +14,21 @@
 .row-1 {
   width: 100%;
 }
-.flex-container {
+.flex-container-column {
   display: flex;
   flex-direction: column;
 }
-#search-artist-song {
-  height: 90%;
+.flex-container-row {
+  display: flex;
+  flex-direction: row;
+  border: 0.5px solid black;
+  margin: 1px;
+}
+#search-song {
+  height: 500px;
+}
+#search-genre {
+  height: 560px;
 }
 #done {
   height: 10%;
@@ -39,64 +48,35 @@ body {
   color: #ecf0f1;
   line-height: 1.618em;
 }
-.tabs {
+.scroll-box {
+  background-color: lightgrey;
+  border: 0.5px solid black;
+  overflow-y: auto;
+}
+.checkbox-container {
+  border: 0.5px solid black;
+  margin: 1px;
+}
+.song-list-item {
   position: relative;
   top: 0;
-  width: 100%;
-  background: #fff;
-  height: 100%;
-}
-.tabs::before,
-.tabs::after {
-  content: '';
-  display: table;
-}
-.tabs::after {
-  clear: both;
-}
-.tab {
+  left: 30px;
   float: left;
-  width: 50%;
 }
-.tab-switch {
-  display: none;
-}
-.tab-label {
+.select-song {
   position: relative;
-  display: block;
-  line-height: 2.75em;
-  height: 3em;
-  padding: 0 1.618em;
-  background: lightgrey;
-  color: #fff;
-  cursor: pointer;
   top: 0;
-  transition: all 0.25s;
+  left: 5px;
 }
-.tab-label:hover {
-  top: -0.25rem;
-  transition: top 0.25s;
-}
-.tab-content {
-  height: 100%;
+#song-ordered-list {
   position: relative;
-  left: 0;
-  padding: 1.618rem;
-  background: lightgrey;
-  opacity: 0;
-  transition: all 0.35s;
+  left: -32px;
+  display: inline;
 }
-.tab-switch:checked + .tab-label {
-  background: #fff;
-  color: #2c3e50;
-  border-bottom: 0;
-  border-right: 0.125rem solid #fff;
-  transition: all 0.35s;
-  z-index: 1;
-  top: -0.0625rem;
+.song-data {
+  position: relative;
+  right: 0px;
 }
-.tab-switch:checked + label + .tab-content {
-  z-index: 2;
-  opacity: 1;
-  transition: all 0.35s;
+.index {
+  width: 1.5em;
 }
