initial training work and spotify auth progress

--- a/src/main/webapp/app/initial-training/initial-training.component.html
+++ b/src/main/webapp/app/initial-training/initial-training.component.html
@@ -1,36 +1,56 @@
-<form>
-  <div class="row" id="page">
-    <div class="col-1 flex-container-column" id="left-column">
-      <div class="flex-container-column" id="search-genre">
-        <h2>Top Genres</h2>
-        <div class="scroll-box">
-          <div *ngFor="let genre of outGenreArray; let i = index">
-            <label class="flex-container-row">
-              <input type="checkbox" class="select-song" />&nbsp;&nbsp;
-              <div class="index">{{ i + 1 }}.</div>
-              <div class="song-data">{{ genre.name }}</div>
-            </label>
+<!DOCTYPE html>
+<html>
+  <head>
+    <script type="text/javascript" src="SpotifyAuth.js"></script>
+  </head>
+  <body>
+    <form>
+      <div class="row" id="page">
+        <div class="col-1 flex-container-column" id="left-column">
+          <div class="flex-container-column" id="search-genre">
+            <h2>Top Genres</h2>
+            <div class="scroll-box">
+              <div *ngFor="let genre of outGenreArray; let i = index">
+                <label class="flex-container-row">
+                  <input type="checkbox" class="select-song" />&nbsp;&nbsp;
+                  <div class="index">{{ i + 1 }}.</div>
+                  <div class="song-data">{{ genre.name }}</div>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-2" id="center-column">
+          <div class="flex-container-row" id="info">
+            <h2>Select Playist</h2>
+            <p>Log into Spotify and choose playlists to help train the recommendation algorithm</p>
+
+            <p>Select your favourite genres or songs from the global top 50</p>
+          </div>
+          <div id="spotify-container">
+            <a href="/spotify-login">
+              <button (click)="importPlaylists()" id="spotify-login-button">Load Spotify Playlists</button>
+            </a>
+          </div>
+        </div>
+        <div class="col-3" id="right-column">
+          <div class="flex-container-column" id="search-song">
+            <h2>Top Songs</h2>
+            <div class="scroll-box">
+              <div *ngFor="let song of outSongArray; let i = index">
+                <label class="flex-container-row">
+                  <input type="checkbox" class="select-song" />&nbsp;&nbsp;
+                  <div class="index">{{ i + 1 }}.</div>
+                  <div class="song-data">{{ song.name }} by {{ song.artist }}</div>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div id="done">
+            <input class="row-1" id="done-button" type="submit" content="Done" />
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-2" id="center-column"></div>
-    <div class="col-3" id="right-column">
-      <div class="flex-container-column" id="search-song">
-        <h2>Top Songs</h2>
-        <div class="scroll-box">
-          <div *ngFor="let song of outSongArray; let i = index">
-            <label class="flex-container-row">
-              <input type="checkbox" class="select-song" />&nbsp;&nbsp;
-              <div class="index">{{ i + 1 }}.</div>
-              <div class="song-data">{{ song.name }} by {{ song.artist }}</div>
-            </label>
-          </div>
-        </div>
-      </div>
-      <div id="done">
-        <input class="row-1" id="done-button" type="submit" content="Done" />
-      </div>
-    </div>
-  </div>
-</form>
+    </form>
+  </body>
+</html>
