spotify api working only for initial training so far

--- a/src/main/webapp/app/initial-training/initial-training.component.html
+++ b/src/main/webapp/app/initial-training/initial-training.component.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script type="text/javascript" src="spotifyServer.js"></script>
-  </head>
   <body>
     <form>
       <div class="row" id="page">
@@ -22,7 +19,7 @@
         </div>
         <div class="col-2" id="center-column">
           <div class="flex-container-column" id="info">
-            <div><h2>Select Playist</h2></div>
+            <div><h2>Select Playlist</h2></div>
             <div><p>Log into Spotify and choose playlists to help train the recommendation algorithm</p></div>
             <div><p>Select your favourite genres or songs from the global top 50</p></div>
             <div>
@@ -30,8 +27,8 @@
             </div>
           </div>
           <div id="spotify-container">
-            <a href="/spotify-login">
-              <button (click)="runScript()" id="spotify-login-button">Load Spotify Playlists</button>
+            <a>
+              <button (click)="openWindow()" id="spotify-login-button">Load Spotify Playlists</button>
             </a>
           </div>
         </div>
