three columns almost finished on initial training

--- a/src/main/webapp/app/initial-training/initial-training.component.scss
+++ b/src/main/webapp/app/initial-training/initial-training.component.scss
@@ -78,8 +78,11 @@ body {
   right: 0px;
 }
 .index {
-  width: 1.5em;
+  width: 2em;
 }
 div {
   color: black;
+}
+#playlist-container {
+  max-height: 400px;
 }
