--- a/src/main/webapp/app/initial-training/initial-training.component.html
+++ b/src/main/webapp/app/initial-training/initial-training.component.html
@@ -26,6 +26,18 @@
               <p id="test-text">{{ outTextVar }}</p>
             </div>
           </div>
+          <div id="playlist-container" class="flex-container-column">
+            <h2>Your Playlists</h2>
+            <div class="scroll-box">
+              <div *ngFor="let playlist of outPlaylistArray; let i = index">
+                <label class="flex-container-row">
+                  <input type="checkbox" class="select-song" />&nbsp;&nbsp;
+                  <div class="index">{{ i + 1 }}.</div>
+                  <div class="song-data">{{ playlist.name }}</div>
+                </label>
+              </div>
+            </div>
+          </div>
           <div id="spotify-container">
             <a>
               <button (click)="openWindow()" id="spotify-login-button">Load Spotify Playlists</button>
@@ -40,7 +52,7 @@
                 <label class="flex-container-row">
                   <input type="checkbox" class="select-song" />&nbsp;&nbsp;
                   <div class="index">{{ i + 1 }}.</div>
-                  <div class="song-data">{{ song.name }} by {{ song.artist }}</div>
+                  <div class="song-data">{{ song.name }}</div>
                 </label>
               </div>
             </div>
